# gw_basic_64

./: CMakeLists.txt  FolderStructurePlanned.md  README.md  TEAM_WORKFLOW.md  calculator.bas  gw_basic_64.sln  gw_basic_64.vcxproj  gw_basic_64.vcxproj.filters  main.cpp
.github/workflows/: ci.yml
Tests/: CMakeLists.txt  test_errorhandler.cpp  test_main.cpp
document/: Lexer_Module_Presentation.pptx  runtime.pptx  storage.pptm
examples/: calculator.bas  data.bas  demo.bas  doloop.bas  gosub.bas  goto.bas  hello.bas  if2.bas  ifelse.bas  loop.bas  rem.bas  test_commands(edit).bas
gw_basic/: GWBasic64.cpp  GWBasic64.h
gw_basic/Errors/: ErrorHandler.cpp  ErrorHandler.h
gw_basic/IO/: ConsoleIO.cpp  ConsoleIO.h  FileIO.h
gw_basic/Lexer/: Lexer.cpp  Lexer.h  Token.h
gw_basic/Parser/: ASTNode.h  Parser.cpp  Parser.h
gw_basic/ProgramInterface/: CommandLineEditor.cpp  CommandLineEditor.h  ScreenRenderer.cpp  ScreenRenderer.h  SpecialKeyHandler.cpp  SpecialKeyHandler.h
gw_basic/ProgramInterface (2)/: CommandLineEditor.cpp
gw_basic/Runtime/: DataManager.cpp  DataManager.h  ExpressionEvaluator.cpp  ExpressionEvaluator.h  FlowControl.cpp  FlowControl.h  IOHandler.cpp  IOHandler.h  StatementExecuter.cpp  StatementExecuter.h  StatementExecutor.cpp  StatementExecutor.h  SubroutineManager.cpp  SubroutineManager.h  SymbolTable.cpp  SymbolTable.h  TypeSystem.cpp  TypeSystem.h
gw_basic/Storage/: ProgramMemory.cpp  ProgramMemory.h
gw_basic/System/: SystemInterface.cpp  SystemInterface.h  SystemInterface_Windows.cpp
